<resources>
    <string name="app_name">MoversApp</string>
    <string name="col1">Name</string>
    <string name="col2">Pickup</string>
    <string name="col3">Destination</string>
    <string name="col4">House Size</string>
    <string name="col5">Total Price</string>
    <string name="row1Name">Christopher</string>
    <string name="row1Pickup">25</string>
    <string name="row1Destination">Khajira</string>
    <string name="row1HouseSize">Christopher</string>
    <string name="row1TotalPrice">25</string>
</resources>