<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_margin="20dp">

        <TableRow
            android:background="@drawable/list_gradient_normal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/col1"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"

                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/col2"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/col3"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/col4"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/col5"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />


        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row1Name"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row1Pickup"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row1Destination"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row1HouseSize"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row1TotalPrice"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

        </TableRow>

    </TableLayout>
</RelativeLayout>